# streamlit-pydantic-ai-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yaml
docs/: index.html
docs/examples/: 01_basic_demo.md  02_quizz.md  03_todo_list.md
docs/getting_started/: index.md
examples/: 01_basic_demo.py  02_quizz.py  03_todo_list.py
examples/01_basic_demo/: index.html
examples/02_quizz/: index.html
examples/03_todo_list/: index.html
features/: index.html
getting_started/: index.html
search/: search_index.json
streamlit_pydantic_ai_copilot/: __init__.py  agent_conversation.py  agent_events.py  agent_session.py  tool_renderer.py  utils.py
